syntax = "proto3";

package keystore;

option go_package = "rpc/keystore";

message CreateKeyRequest {
    bytes public_key = 1;
}

message CreateKeyResponse {
    string id = 1;
}

message GetKeyRequest {
    string id = 1;
}

message GetKeyResponse {
    bytes public_key = 1;
}

service KeystoreService {
    rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse) {};
    rpc GetKey(GetKeyRequest) returns (GetKeyResponse) {};
}
