syntax = "proto3";

package relay;

option go_package = "rpc/relay";

message StreamMessage {
    string id = 1;
    bytes data = 2;
    bytes signature = 3;
}

message GetStreamRequest {
    string id = 1;
}

message Empty {}

service RelayService { 
    rpc CreateStream(stream StreamMessage) returns (Empty) {};
    rpc GetStream(GetStreamRequest) returns (stream StreamMessage) {};
}
